feat: blogs upload option added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,18 +34,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  firebase_core: ^2.27.0
-  firebase_auth: ^4.17.8
-  flutter_bloc: ^8.1.6
-  # supabase_flutter: ^2.5.6
-  fpdart: ^1.1.0
-  get_it: ^7.6.7
-  cloud_firestore: ^4.15.8
-  dotted_border: ^2.1.0
-  image_picker: ^1.0.8
-  firebase_storage: ^11.6.9
-  internet_connection_checker_plus: ^2.2.0
+  cupertino_icons:
+  firebase_core:
+  firebase_auth:
+  flutter_bloc:
+  fpdart:
+  get_it:
+  cloud_firestore:
+  dotted_border:
+  image_picker:
+  firebase_storage:
+  internet_connection_checker_plus:
 
 dev_dependencies:
   flutter_test:
